syntax = "proto3";

option go_package = "./";

package Auction;

service Auction {
    rpc Bid(BidRequest) returns (BidResponse) {}
    rpc Result(ResultRequest) returns (ResultResponse) {}
}

message BidRequest {
    int32 Id = 1;
    int32 bid = 2;
    int32 timestamp = 3;
}

message BidResponse {
    string status = 1;
    int32 timestamp = 2;
}

message ResultRequest {
    int32 Id = 1;
    int32 timestamp = 2;
}

message ResultResponse {
    int32 id = 1;
    int32 bid = 2;
    string status = 3;
    int32 timestamp = 4;
}